added feature to display score

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -37,3 +37,13 @@ h1{
     //     background-color: #076c59;
 
 }
+
+h2{
+    display: flex;
+    justify-content: center;
+}
+
+p{
+    display: flex;
+    justify-content: center;
+}
