--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,4 +36,14 @@ h1 {
   height: 100x;
   margin: 10px;
   border: 3px solid #333;
+}
+
+h2 {
+  display: flex;
+  justify-content: center;
+}
+
+p {
+  display: flex;
+  justify-content: center;
 }/*# sourceMappingURL=styles.css.map */
