--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,25 +25,55 @@ body {
 h1 {
   display: flex;
   justify-content: center;
+  border-bottom: 1px #ccc solid;
+}
+
+.Instructions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
 }
 
 .flex-box-container {
   display: flex;
   justify-content: center;
 }
-.flex-box-container button {
+.flex-box-container .button {
   width: 100px;
-  height: 100x;
+  height: 50px;
   margin: 10px;
-  border: 3px solid #333;
+  border: 3px solid #fff;
+  border-radius: 50%;
+}
+.flex-box-container i {
+  display: flex;
+  margin: auto;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  font-size: 45px;
 }
 
-h2 {
+.selections {
   display: flex;
+  align-items: center;
   justify-content: center;
 }
-
-p {
+.selections p {
   display: flex;
   justify-content: center;
+  padding: 10px;
+  padding-right: 5px;
+}
+.selections #playerSelection, .selections #computerSelection {
+  border: 0;
+  width: 1.3rem;
+}
+
+#outcomeMessage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px #ccc solid;
 }/*# sourceMappingURL=styles.css.map */
