--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -24,26 +24,66 @@ body {
 h1{
     display: flex;
     justify-content: center;
+    border-bottom:1px #ccc solid;
 }
+
+.Instructions{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    
+}
+
 .flex-box-container{
     display: flex;
     justify-content: center;
-    button{
+    //border-bottom: 1px #ccc solid;
+    .button{
         width: 100px;
-        height: 100x;
+        height: 50px;
         margin: 10px;
-        border: 3px solid #333;
+        border: 3px solid #fff;
+        border-radius: 50%;
     }
+    i{
+        display: flex;
+        margin: auto;
+        width: 50%;
+        justify-content: center;
+        align-items: center;
+        font-size: 45px;
+    }
+  
     //     background-color: #076c59;
 
 }
 
-h2{
-    display: flex;
-    justify-content: center;
-}
 
-p{
+.selections{
     display: flex;
+    align-items: center;
     justify-content: center;
+    
+    p{
+        display: flex;
+        justify-content: center;
+        padding:10px;
+        padding-right:5px;
+        
+    }
+    #playerSelection, #computerSelection{
+        border: 0;
+        width: 1.3rem;
+    }
+ 
+}
+#outcomeMessage{
+    
+    display:flex;
+    // flex-direction: column;
+    // font-size: 100px;
+    justify-content:center;
+    align-items:center;
+    border-bottom: 1px #ccc solid;
 }
