--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,6 +26,7 @@ h1 {
   display: flex;
   justify-content: center;
   border-bottom: 1px #ccc solid;
+  padding-bottom: 25px;
 }
 
 .Instructions {
@@ -45,6 +46,10 @@ h1 {
   margin: 10px;
   border: 3px solid #fff;
   border-radius: 50%;
+}
+.flex-box-container .button:hover {
+  transform: scale(1.25);
+  background-color: var(--color-secondary);
 }
 .flex-box-container i {
   display: flex;
@@ -82,7 +87,9 @@ h1 {
   flex-direction: column;
   border: 1px #ccc solid;
   border-radius: 15px;
-  margin: 100px;
+  margin-left: 30%;
+  margin-right: 30%;
+  background-color: var(--color-secondary);
 }
 .scoreBoardContainer .scores {
   display: flex;
@@ -99,6 +106,7 @@ h1 {
   align-items: center;
   border-bottom: 1px #ccc solid;
   border-radius: 15px;
+  margin-top: 5px;
 }
 
 .scoreBoardContainer p {
@@ -134,4 +142,9 @@ h1 {
   align-items: center;
   background-color: var(--color-grey-5);
   font-size: 40px;
+}
+
+a {
+  color: var(--color-white);
+  font-size: 10px;
 }/*# sourceMappingURL=styles.css.map */
