added media queries

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,6 +132,8 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: auto;
 }
 
 #indexBody a {
@@ -147,4 +149,13 @@ h1 {
 a {
   color: var(--color-white);
   font-size: 10px;
+}
+
+@media screen and (max-width: 600px) {
+  .scoreBoardContainer .scores {
+    flex-direction: column;
+  }
+  .scoreBoardContainer p {
+    justify-content: right;
+  }
 }/*# sourceMappingURL=styles.css.map */
