--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -144,6 +144,7 @@ h1{
     color: var(--color-white);
     align-items: center;
     background-color: var(--color-grey-5);
+    padding-top: 10%;
 }
 
 #prs{
