--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,8 +25,10 @@ body {
 h1 {
   display: flex;
   justify-content: center;
+  align-items: center;
   border-bottom: 1px #ccc solid;
   padding-bottom: 25px;
+  text-align: center;
 }
 
 .Instructions {
@@ -80,6 +82,7 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .scoreBoardContainer {
@@ -166,6 +169,10 @@ a {
   }
   .flex-box-container {
     flex-direction: column;
+    align-items: center;
+  }
+  h1 {
+    justify-content: center;
     align-items: center;
   }
 }/*# sourceMappingURL=styles.css.map */
