--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -25,8 +25,10 @@ body {
 h1{
     display: flex;
     justify-content: center;
+    align-items: center;
     border-bottom:1px #ccc solid;
     padding-bottom: 25px;
+    text-align: center;
 }
 
 .Instructions{
@@ -91,6 +93,7 @@ h1{
     // font-size: 100px;
     justify-content:center;
     align-items:center;
+    text-align: center;
     //border-bottom: 1px #ccc solid;
 }
 
@@ -186,6 +189,10 @@ a{
     }
     .flex-box-container{
         flex-direction: column;
+        align-items: center;
+    }
+    h1{
+        justify-content: center;
         align-items: center;
     }
 }
